--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dj-database-url==0.5.0
 Django==1.11.11
 django-jet==1.0.7
 django-mathfilters==0.4.0
+gunicorn==19.6.0
 Pillow==5.1.0
 python-decouple==3.1
 pytz==2018.3
